<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewAccount"
    tools:showIn="@layout/activity_new_account">

    <EditText
        android:id="@+id/newacc_username"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="17dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newacc_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newacc_name" />

    <EditText
        android:id="@+id/newacc_password"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password_here"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newacc_confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newacc_username" />

    <EditText
        android:id="@+id/newacc_confirmPassword"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="confirm password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/NewaccSubmitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newacc_password" />

    <EditText
        android:id="@+id/newacc_age"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newacc_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newacc_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newacc_name"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newacc_username"
        app:layout_constraintEnd_toStartOf="@+id/newacc_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NewaccSubmitBtn"
        android:layout_width="132dp"
        android:layout_height="49dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="48dp"
        android:text="@string/submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newacc_confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>